# vakyt

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  export_requirements.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
api/: entrypoint.sh  models.py
db/: Dockerfile  init_db.py  initial.sql  pg_hba.conf  postgresql.conf  session.py
db/sql_queries/: default_db.sql
vakyt_bot/: Dockerfile  entrypoint.sh  main.py
vakyt_bot/config/: __init__.py
vakyt_bot/handlers/: __init__.py  general.py
