[project]
name = "vakyt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "aiogram>=3.13.1",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "fastapi>=0.115.3",
    "alembic>=1.13.3",
    "uvicorn>=0.32.0",
]

[tool.isort]
# Set the maximum line length to 120.
line_length = 120

[tool.ruff]

# Set the maximum line length to 120.
line-length = 120

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "migrations",
    "pyproject.toml",
    "poetry.lock",
    "README.md",
    "readme_ruff_integration.md",
    ".dockerignore",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "single"
